<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
                                   xmlns:tools="http://schemas.android.com/tools"
                                   android:layout_width="match_parent" android:layout_height="wrap_content"
                                   android:layout_margin="5dp">

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

        <ImageView
                android:id="@+id/image_medium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_margin="10dp"
                tools:src="@mipmap/ic_launcher_round"/>

        <LinearLayout
                android:id="@+id/brewery_content"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:layout_marginStart="10dp"
                android:orientation="vertical">

            <TextView
                    android:id="@+id/brewery_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    tools:text="@string/brewery_detail_name"
                    android:textSize="20sp"/>

            <TextView
                    android:id="@+id/brewery_description"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    tools:text="@string/brewery_detail_description"
                    android:textSize="20sp"/>

            <TextView
                    android:id="@+id/brewery_organic"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    tools:text="@string/brewery_detail_organic"
                    android:textSize="20sp"/>

            <TextView
                    android:id="@+id/brewery_status"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    tools:text="@string/brewery_detail_status"
                    android:textSize="20sp"/>

            <TextView
                    android:id="@+id/brewery_create_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    tools:text="@string/brewery_detail_create_date"
                    android:textSize="20sp"/>

        </LinearLayout>
    </LinearLayout>

</androidx.cardview.widget.CardView>